# RAG

RAG/: pyproject.toml  requirements.txt
RAG/0-DataIngestParsing/: 1-dataingestion.ipynb  2-dataparsingpdf.ipynb  3-dataparsingdoc.ipynb  4-csvexcelparsing.ipynb  5-jsonparsing.ipynb  6-databaseparsing.ipynb
RAG/0-DataIngestParsing/data/structured_files/: inventory.xlsx
